--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -12,39 +12,33 @@
 
     <!-- TODO #1 - Use a loop to display job results in a table. -->
 
-    <table th:each="job : ${jobs}" class="job-listing">
+    <table th:each = "job : ${jobs}" class = "job-listing">
+            <tr>
+                <th>ID:</th>
+                <td th:text = "${job.id}"></td>
+            </tr>
+            <tr>
+                <th>Name:</th>
+                <td th:text = "${job.name}"></td>
+            </tr>
+            <tr>
+                <th>Employer:</th>
+                <td th:text = "${job.employer}"></td>
+            </tr>
+            <tr>
+                <th>Location:</th>
+                <td th:text = "${job.location}"></td>
+            </tr>
+            <tr>
+                <th>Position Type:</th>
+                <td th:text = ${job.positionType}></td>
+            </tr>
+            <tr>
+                <th>Skill:</th>
+                <td th:text = "${job.coreCompetency}"></td>
+            </tr>
 
-        <tr>
-            <th>ID:</th>
-            <td th:text="${job.id}"></td>
-        </tr>
-
-        <tr>
-            <th>Name:</th>
-            <td th:text="${job.name}"</td>
-        </tr>
-
-        <tr>
-            <th>Employer:</th>
-            <td th:text="${job.employer}"></td>
-        </tr>
-
-        <tr>
-            <th>Location:</th>
-            <td th:text="${job.location}"></td>
-        </tr>
-
-        <tr>
-            <th>Position Type:</th>
-            <td th:text="${job.positionType}"></td>
-        </tr>
-
-        <tr>
-            <th>Skill:</th>
-            <td th:text="${job.coreCompetency}"></td>
-        </tr>
     </table>
-
 
 </div>
 
