--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,6 +38,8 @@
 
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
 
+    <table th:replace = "fragments :: job-loop"></table>
+
 </div>
 
 </body>
